[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/ui/HUD.gd" type="Script" id=1]
[ext_resource path="res://scripts/ui/SimulationMenu.gd" type="Script" id=2]
[ext_resource path="res://scripts/ui/LogBook.gd" type="Script" id=3]

[node name="UI" type="CanvasLayer"]

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="HealthBar" type="ProgressBar" parent="HUD"]
margin_left = 20.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 40.0
value = 100.0

[node name="HealthLabel" type="Label" parent="HUD"]
margin_left = 20.0
margin_top = 2.0
margin_right = 100.0
margin_bottom = 18.0
text = "Health"

[node name="QiBar" type="ProgressBar" parent="HUD"]
margin_left = 20.0
margin_top = 60.0
margin_right = 220.0
margin_bottom = 80.0
value = 100.0

[node name="QiLabel" type="Label" parent="HUD"]
margin_left = 20.0
margin_top = 42.0
margin_right = 100.0
margin_bottom = 58.0
text = "Qi"

[node name="RealmLabel" type="Label" parent="HUD"]
margin_left = 20.0
margin_top = 90.0
margin_right = 250.0
margin_bottom = 106.0
text = "Realm: Mortal"

[node name="KarmaLabel" type="Label" parent="HUD"]
margin_left = 20.0
margin_top = 110.0
margin_right = 150.0
margin_bottom = 126.0
text = "Karma: 0"

[node name="AbilityContainer" type="VBoxContainer" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -220.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 200.0

[node name="AbilitiesLabel" type="Label" parent="HUD/AbilityContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "Active Abilities:"

[node name="SimulationMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="SimulationMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -300.0
margin_right = 400.0
margin_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="SimulationMenu/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Title" type="Label" parent="SimulationMenu/Panel/VBoxContainer"]
margin_right = 760.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "VILLAIN SIMULATOR"
align = 1

[node name="HSeparator" type="HSeparator" parent="SimulationMenu/Panel/VBoxContainer"]
margin_top = 24.0
margin_right = 760.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 10 )

[node name="ScrollContainer" type="ScrollContainer" parent="SimulationMenu/Panel/VBoxContainer"]
margin_top = 38.0
margin_right = 760.0
margin_bottom = 438.0
size_flags_vertical = 3

[node name="NarrativeLabel" type="RichTextLabel" parent="SimulationMenu/Panel/VBoxContainer/ScrollContainer"]
margin_right = 760.0
margin_bottom = 400.0
rect_min_size = Vector2( 760, 400 )
bbcode_enabled = true
bbcode_text = "[center]Activate the Villain Simulator to see possible futures...[/center]"
text = "Activate the Villain Simulator to see possible futures..."

[node name="ChoiceContainer" type="VBoxContainer" parent="SimulationMenu/Panel/VBoxContainer"]
margin_top = 442.0
margin_right = 760.0
margin_bottom = 442.0

[node name="StartButton" type="Button" parent="SimulationMenu/Panel/VBoxContainer"]
margin_top = 446.0
margin_right = 760.0
margin_bottom = 486.0
rect_min_size = Vector2( 0, 40 )
text = "Run Simulation"

[node name="CloseButton" type="Button" parent="SimulationMenu/Panel/VBoxContainer"]
margin_top = 490.0
margin_right = 760.0
margin_bottom = 520.0
rect_min_size = Vector2( 0, 30 )
text = "Close"

[node name="LogBook" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="LogBook"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -300.0
margin_right = 400.0
margin_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="LogBook/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Title" type="Label" parent="LogBook/Panel/VBoxContainer"]
margin_right = 760.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "CHRONICLE OF EVENTS"
align = 1

[node name="HSeparator" type="HSeparator" parent="LogBook/Panel/VBoxContainer"]
margin_top = 24.0
margin_right = 760.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 10 )

[node name="ScrollContainer" type="ScrollContainer" parent="LogBook/Panel/VBoxContainer"]
margin_top = 38.0
margin_right = 760.0
margin_bottom = 528.0
size_flags_vertical = 3

[node name="LogText" type="RichTextLabel" parent="LogBook/Panel/VBoxContainer/ScrollContainer"]
margin_right = 760.0
margin_bottom = 490.0
rect_min_size = Vector2( 760, 490 )
bbcode_enabled = true
text = "Your journey begins..."

[node name="CloseButton" type="Button" parent="LogBook/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 40.0
text = "Close"
